<resources>
    <string name="app_name">TikTok Downloader</string>
    <string name="download">Download</string>
    <string name="copy_tik_tok_video_link_nclick_on_download"><![CDATA[Copy Tik Tok Video Link & \nClick on Download]]></string>
    <string name="_0">0%</string>
    <string name="downloading_">Downloading…</string>
    <string name="no_internet_expand">No Internet, Please Check Your Connection</string>
    <string name="no_internet">No Internet</string>
    <string name="please_wait">Please wait</string>
    <string name="no_copy_title">No Link</string>
    <string name="no_copy">You haven\\\'t copied any link yet!</string>
    <string name="not_valid_link">Not a valid Link</string>
    <string name="copy_valid_link">Please copy a valid TikTok Link</string>
    <string name="error_loading_clipboard_title">Error loading clipboard data</string>
    <string name="error_loading_clipboard">Clipboard Error,please restart the app or copy link again.</string>
    <string name="tick_tok__base_url">tiktok.com/</string>
    <string name="downloads">Downloads</string>
    <string name="my_downloads">My Downloads</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="change_bounds">Change Bounds</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="no_files">No Files Found</string>
    <string name="directory_not_found">You haven\'t downloaded any videos</string>
    <string name="about">About</string>
    <string name="how_to_use">How to use ?</string>
    <string name="share_our_app">Share our app</string>
    <string name="contact_us">Contact us</string>
    <string name="guide">Guide</string>
    <string name="guide_explained"><![CDATA[1. Open Tik-Tok, Copy the link of the video you want to download \n\n2. Come back to this app and click on Download button, it will automatically get your link & will start Download asap\n\nNote: Download speed depends on your internet connection]]></string>
</resources>